@@ -563,14 +563,14 @@ public class ImageViewerTab implements Tab {
                 createFlipbook();
             });
 
-            JLabel speedLabel = new JLabel(String.format("Speed: %d ms", speed));
+            JLabel speedLabel = new JLabel("Speed: %d ms".formatted(speed));
             mainControlPanel.add(speedLabel);
 
             speedSlider = new JSlider(0, 2000, SPEED);
             mainControlPanel.add(speedSlider);
             speedSlider.addChangeListener((ChangeEvent e) -> {
                 speed = speedSlider.getValue();
-                speedLabel.setText(String.format("Speed: %d ms", speed));
+                speedLabel.setText("Speed: %d ms".formatted(speed));
                 JSlider source = (JSlider) e.getSource();
                 if (source.getValueIsAdjusting()) {
                     return;
@@ -579,14 +579,14 @@ public class ImageViewerTab implements Tab {
                 processImages();
             });
 
-            JLabel zoomLabel = new JLabel(String.format("Zoom: %d", zoom));
+            JLabel zoomLabel = new JLabel("Zoom: %d".formatted(zoom));
             mainControlPanel.add(zoomLabel);
 
             zoomSlider = new JSlider(100, 2000, ZOOM);
             mainControlPanel.add(zoomSlider);
             zoomSlider.addChangeListener((ChangeEvent e) -> {
                 zoom = zoomSlider.getValue();
-                zoomLabel.setText(String.format("Zoom: %d", zoom));
+                zoomLabel.setText("Zoom: %d".formatted(zoom));
                 JSlider source = (JSlider) e.getSource();
                 if (source.getValueIsAdjusting()) {
                     return;
@@ -595,14 +595,14 @@ public class ImageViewerTab implements Tab {
             });
 
             String stackText = "Images per blink: %d";
-            JLabel stackLabel = new JLabel(String.format(stackText, stackSize));
+            JLabel stackLabel = new JLabel(stackText.formatted(stackSize));
             mainControlPanel.add(stackLabel);
 
             stackSlider = new JSlider(1, NUMBER_OF_WISEVIEW_EPOCHS, 1);
             mainControlPanel.add(stackSlider);
             stackSlider.addChangeListener((ChangeEvent e) -> {
                 stackSize = stackSlider.getValue();
-                stackLabel.setText(String.format(stackText, stackSize));
+                stackLabel.setText(stackText.formatted(stackSize));
                 JSlider source = (JSlider) e.getSource();
                 if (source.getValueIsAdjusting()) {
                     return;
@@ -628,7 +628,7 @@ public class ImageViewerTab implements Tab {
                         stackSlider.setValue(1);
                         stackSlider.addChangeListener(actionListener);
                         stackSize = 1;
-                        stackLabel.setText(String.format(stackText, stackSize));
+                        stackLabel.setText(stackText.formatted(stackSize));
                     }
                 } else {
                     if (!imagesW1All.isEmpty()) {
@@ -1398,7 +1398,7 @@ public class ImageViewerTab implements Tab {
                 }
             });
 
-            changeFovLabel = new JLabel(html(String.format(CHANGE_FOV_TEXT, fieldOfView)));
+            changeFovLabel = new JLabel(html(CHANGE_FOV_TEXT.formatted(fieldOfView)));
             mouseControlPanel.add(changeFovLabel);
             changeFovLabel.setToolTipText("Spin wheel on flipbook images to change the size of the field of view.");
 
@@ -1547,14 +1547,14 @@ public class ImageViewerTab implements Tab {
 
             playerControlPanel.add(new JLabel());
 
-            JButton rotateButton = new JButton(String.format("Rotate by 90° clockwise: %d°", quadrantCount * 90));
+            JButton rotateButton = new JButton("Rotate by 90° clockwise: %d°".formatted(quadrantCount * 90));
             playerControlPanel.add(rotateButton);
             rotateButton.addActionListener((ActionEvent evt) -> {
                 quadrantCount++;
                 if (quadrantCount > 3) {
                     quadrantCount = 0;
                 }
-                rotateButton.setText(String.format("Rotate by 90° clockwise: %d°", quadrantCount * 90));
+                rotateButton.setText("Rotate by 90° clockwise: %d°".formatted(quadrantCount * 90));
                 processImages();
             });
 
@@ -2041,7 +2041,7 @@ public class ImageViewerTab implements Tab {
                             } else if (fieldOfView > 0) {
                                 fieldOfView--;
                             }
-                            changeFovLabel.setText(html(String.format(CHANGE_FOV_TEXT, fieldOfView)));
+                            changeFovLabel.setText(html(CHANGE_FOV_TEXT.formatted(fieldOfView)));
                         }
                     });
 
@@ -2109,7 +2109,7 @@ public class ImageViewerTab implements Tab {
                             public void mousePressed(MouseEvent evt) {
                                 try {
                                     String imageSize = roundTo2DecNZ(size * pixelScale / 60f);
-                                    Desktop.getDesktop().browse(new URI(String.format(VHS_SURVEY_URL, targetRa, targetDec, "all", imageSize, imageSize)));
+                                    Desktop.getDesktop().browse(new URI(VHS_SURVEY_URL.formatted(targetRa, targetDec, "all", imageSize, imageSize)));
                                 } catch (IOException | URISyntaxException ex) {
                                     throw new RuntimeException(ex);
                                 }
@@ -2139,7 +2139,7 @@ public class ImageViewerTab implements Tab {
                             public void mousePressed(MouseEvent evt) {
                                 try {
                                     String imageSize = roundTo2DecNZ(size * pixelScale / 60f);
-                                    Desktop.getDesktop().browse(new URI(String.format(UHS_SURVEY_URL, targetRa, targetDec, "all", imageSize, imageSize)));
+                                    Desktop.getDesktop().browse(new URI(UHS_SURVEY_URL.formatted(targetRa, targetDec, "all", imageSize, imageSize)));
                                 } catch (IOException | URISyntaxException ex) {
                                     throw new RuntimeException(ex);
                                 }
@@ -2169,7 +2169,7 @@ public class ImageViewerTab implements Tab {
                             public void mousePressed(MouseEvent evt) {
                                 try {
                                     String imageSize = roundTo2DecNZ(size * pixelScale / 60f);
-                                    Desktop.getDesktop().browse(new URI(String.format(UKIDSS_SURVEY_URL, targetRa, targetDec, "all", imageSize, imageSize)));
+                                    Desktop.getDesktop().browse(new URI(UKIDSS_SURVEY_URL.formatted(targetRa, targetDec, "all", imageSize, imageSize)));
                                 } catch (IOException | URISyntaxException ex) {
                                     throw new RuntimeException(ex);
                                 }
@@ -2641,8 +2641,8 @@ public class ImageViewerTab implements Tab {
                 createHyperlink(finderChartLabel, getFinderChartUrl(targetRa, targetDec, finderChartFOV));
                 createHyperlink(legacyViewerLabel, getLegacySkyViewerUrl(targetRa, targetDec, "unwise-neo6"));
                 String fovSize = roundTo2DecNZ(defaultFOV / 60f);
-                createHyperlink(ukidssCutoutsLabel, String.format(UKIDSS_SURVEY_URL, targetRa, targetDec, "all", fovSize, fovSize));
-                createHyperlink(vhsCutoutsLabel, String.format(VHS_SURVEY_URL, targetRa, targetDec, "all", fovSize, fovSize));
+                createHyperlink(ukidssCutoutsLabel, UKIDSS_SURVEY_URL.formatted(targetRa, targetDec, "all", fovSize, fovSize));
+                createHyperlink(vhsCutoutsLabel, VHS_SURVEY_URL.formatted(targetRa, targetDec, "all", fovSize, fovSize));
                 createHyperlink(simbadLabel, getSimbadUrl(targetRa, targetDec, 30));
                 createHyperlink(vizierLabel, getVizierUrl(targetRa, targetDec, 30, 50, false));
 
@@ -3821,7 +3821,7 @@ public class ImageViewerTab implements Tab {
             } else {
                 unwiseEpoch = "neo" + epoch;
             }
-            String unwiseURL = String.format("http://unwise.me/cutout_fits?version=%s&ra=%f&dec=%f&size=%d&bands=%d&file_img_m=on", unwiseEpoch, targetRa, targetDec, size, band);
+            String unwiseURL = "http://unwise.me/cutout_fits?version=%s&ra=%f&dec=%f&size=%d&bands=%d&file_img_m=on".formatted(unwiseEpoch, targetRa, targetDec, size, band);
             try (InputStream fi = establishHttpConnection(unwiseURL).getInputStream(); InputStream bi = new BufferedInputStream(fi, BUFFER_SIZE); InputStream gzi = new GzipCompressorInputStream(bi); ArchiveInputStream ti = new TarArchiveInputStream(gzi)) {
                 ArchiveEntry entry;
                 Map<Long, byte[]> entries = new HashMap();
@@ -3868,7 +3868,7 @@ public class ImageViewerTab implements Tab {
         }
         String selectedBand = band == 1 ? "r" : "z";
         String baseUrl = "https://www.legacysurvey.org/viewer/fits-cutout?ra=%f&dec=%f&pixscale=%f&layer=%s&size=%d&bands=%s";
-        String imageUrl = String.format(baseUrl, targetRa, targetDec, PIXEL_SCALE_DECAM, survey, size, selectedBand);
+        String imageUrl = baseUrl.formatted(targetRa, targetDec, PIXEL_SCALE_DECAM, survey, size, selectedBand);
         try {
             // Ascending scan
             HttpURLConnection connection = establishHttpConnection(imageUrl);
@@ -3903,7 +3903,7 @@ public class ImageViewerTab implements Tab {
         List<String> fileNames = new ArrayList();
         String selectedBand = band == 1 ? "r" : "y";
         try {
-            String downloadUrl = String.format("http://ps1images.stsci.edu/cgi-bin/ps1filenames.py?RA=%f&DEC=%f&filters=%s&type=warp&sep=comma", targetRa, targetDec, selectedBand);
+            String downloadUrl = "http://ps1images.stsci.edu/cgi-bin/ps1filenames.py?RA=%f&DEC=%f&filters=%s&type=warp&sep=comma".formatted(targetRa, targetDec, selectedBand);
             String response = readResponse(establishHttpConnection(downloadUrl), "Pan-STARRS");
             try (Scanner scanner = new Scanner(response)) {
                 String[] columnNames = scanner.nextLine().split(SPLIT_CHAR);
@@ -3938,7 +3938,7 @@ public class ImageViewerTab implements Tab {
             writeLogEntry("band " + band + " | image " + requestedEpoch / 2 + " | cached");
             return;
         }
-        String imageUrl = String.format("http://ps1images.stsci.edu/cgi-bin/fitscut.cgi?ra=%f&dec=%f&size=%d&red=%s&format=fits", targetRa, targetDec, size, fileName);
+        String imageUrl = "http://ps1images.stsci.edu/cgi-bin/fitscut.cgi?ra=%f&dec=%f&size=%d&red=%s&format=fits".formatted(targetRa, targetDec, size, fileName);
         try {
             // Ascending scan
             HttpURLConnection connection = establishHttpConnection(imageUrl);
@@ -4335,7 +4335,7 @@ public class ImageViewerTab implements Tab {
             if (imageSize > 3000) {
                 return null;
             }
-            String imageUrl = String.format("https://www.legacysurvey.org/viewer/jpeg-cutout?ra=%f&dec=%f&pixscale=%f&size=%d&bands=%s&layer=%s", targetRa, targetDec, PIXEL_SCALE_DECAM, imageSize, DESI_FILTERS, DESI_LS_DR_PARAM);
+            String imageUrl = "https://www.legacysurvey.org/viewer/jpeg-cutout?ra=%f&dec=%f&pixscale=%f&size=%d&bands=%s&layer=%s".formatted(targetRa, targetDec, PIXEL_SCALE_DECAM, imageSize, DESI_FILTERS, DESI_LS_DR_PARAM);
             HttpURLConnection connection = establishHttpConnection(imageUrl);
             BufferedImage image;
             try (BufferedInputStream stream = new BufferedInputStream(connection.getInputStream(), BUFFER_SIZE)) {
@@ -4350,7 +4350,7 @@ public class ImageViewerTab implements Tab {
     private BufferedImage fetchPs1Image(double targetRa, double targetDec, double size) {
         try {
             List<String> fileNames = new ArrayList<>();
-            String imageUrl = String.format("http://ps1images.stsci.edu/cgi-bin/ps1filenames.py?RA=%f&DEC=%f&filters=giy&sep=comma", targetRa, targetDec);
+            String imageUrl = "http://ps1images.stsci.edu/cgi-bin/ps1filenames.py?RA=%f&DEC=%f&filters=giy&sep=comma".formatted(targetRa, targetDec);
             String response = readResponse(establishHttpConnection(imageUrl), "Pan-STARRS");
             try (Scanner scanner = new Scanner(response)) {
                 String[] columnNames = scanner.nextLine().split(SPLIT_CHAR);
@@ -4366,7 +4366,7 @@ public class ImageViewerTab implements Tab {
                     fileNames.add(columnValues[fileName]);
                 }
             }
-            imageUrl = String.format("http://ps1images.stsci.edu/cgi-bin/fitscut.cgi?red=%s&green=%s&blue=%s&ra=%f&dec=%f&size=%d&output_size=%d&autoscale=99.8", fileNames.get(2), fileNames.get(1), fileNames.get(0), targetRa, targetDec, (int) round(size * pixelScale * 4), 1024);
+            imageUrl = "http://ps1images.stsci.edu/cgi-bin/fitscut.cgi?red=%s&green=%s&blue=%s&ra=%f&dec=%f&size=%d&output_size=%d&autoscale=99.8".formatted(fileNames.get(2), fileNames.get(1), fileNames.get(0), targetRa, targetDec, (int) round(size * pixelScale * 4), 1024);
             HttpURLConnection connection = establishHttpConnection(imageUrl);
             BufferedImage image;
             try (BufferedInputStream stream = new BufferedInputStream(connection.getInputStream(), BUFFER_SIZE)) {
@@ -4446,7 +4446,7 @@ public class ImageViewerTab implements Tab {
     private BufferedImage fetchSdssImage(double targetRa, double targetDec, double size) {
         try {
             int resolution = 1024;
-            String imageUrl = String.format(SDSS_BASE_URL + "/SkyserverWS/ImgCutout/getjpeg?ra=%f&dec=%f&width=%d&height=%d&scale=%f", targetRa, targetDec, resolution, resolution, size * pixelScale / resolution);
+            String imageUrl = (SDSS_BASE_URL + "/SkyserverWS/ImgCutout/getjpeg?ra=%f&dec=%f&width=%d&height=%d&scale=%f").formatted(targetRa, targetDec, resolution, resolution, size * pixelScale / resolution);
             HttpURLConnection connection = establishHttpConnection(imageUrl);
             BufferedImage image;
             try (BufferedInputStream stream = new BufferedInputStream(connection.getInputStream(), BUFFER_SIZE)) {
@@ -4897,12 +4897,12 @@ public class ImageViewerTab implements Tab {
 
             JPanel bandPanel = new JPanel(new GridLayout(1, 0));
 
-            bandPanel.add(buildImagePanel(retrievePs1Image(String.format("red=%s", imageInfos.get("g")), targetRa, targetDec, size, true), getImageLabel("PS1 g", year_g)));
-            bandPanel.add(buildImagePanel(retrievePs1Image(String.format("red=%s", imageInfos.get("r")), targetRa, targetDec, size, true), getImageLabel("PS1 r", year_r)));
-            bandPanel.add(buildImagePanel(retrievePs1Image(String.format("red=%s", imageInfos.get("i")), targetRa, targetDec, size, true), getImageLabel("PS1 i", year_i)));
-            bandPanel.add(buildImagePanel(retrievePs1Image(String.format("red=%s", imageInfos.get("z")), targetRa, targetDec, size, true), getImageLabel("PS1 z", year_z)));
-            bandPanel.add(buildImagePanel(retrievePs1Image(String.format("red=%s", imageInfos.get("y")), targetRa, targetDec, size, true), getImageLabel("PS1 y", year_y)));
-            bandPanel.add(buildImagePanel(retrievePs1Image(String.format("red=%s&green=%s&blue=%s", imageInfos.get("y"), imageInfos.get("i"), imageInfos.get("g")), targetRa, targetDec, size, false), getImageLabel("PS1 y-i-g", year_y_i_g)));
+            bandPanel.add(buildImagePanel(retrievePs1Image("red=%s".formatted(imageInfos.get("g")), targetRa, targetDec, size, true), getImageLabel("PS1 g", year_g)));
+            bandPanel.add(buildImagePanel(retrievePs1Image("red=%s".formatted(imageInfos.get("r")), targetRa, targetDec, size, true), getImageLabel("PS1 r", year_r)));
+            bandPanel.add(buildImagePanel(retrievePs1Image("red=%s".formatted(imageInfos.get("i")), targetRa, targetDec, size, true), getImageLabel("PS1 i", year_i)));
+            bandPanel.add(buildImagePanel(retrievePs1Image("red=%s".formatted(imageInfos.get("z")), targetRa, targetDec, size, true), getImageLabel("PS1 z", year_z)));
+            bandPanel.add(buildImagePanel(retrievePs1Image("red=%s".formatted(imageInfos.get("y")), targetRa, targetDec, size, true), getImageLabel("PS1 y", year_y)));
+            bandPanel.add(buildImagePanel(retrievePs1Image("red=%s&green=%s&blue=%s".formatted(imageInfos.get("y"), imageInfos.get("i"), imageInfos.get("g")), targetRa, targetDec, size, false), getImageLabel("PS1 y-i-g", year_y_i_g)));
 
             JFrame imageFrame = new JFrame();
             imageFrame.setIconImage(getToolBoxImage());
@@ -5044,7 +5044,7 @@ public class ImageViewerTab implements Tab {
             Map<String, String> imageInfos = getPs1FileNames(targetRa, targetDec);
             if (!imageInfos.isEmpty()) {
                 int year = getPs1Epoch(targetRa, targetDec, "z");
-                image = retrievePs1Image(String.format("red=%s", imageInfos.get("z")), targetRa, targetDec, size, true);
+                image = retrievePs1Image("red=%s".formatted(imageInfos.get("z")), targetRa, targetDec, size, true);
                 timeSeries.add(new Couple(getImageLabel("PS1 z", year), new NirImage(year, image)));
             }
 
@@ -5172,7 +5172,7 @@ public class ImageViewerTab implements Tab {
                 Map<String, String> imageInfos = getPs1FileNames(targetRa, targetDec);
                 if (!imageInfos.isEmpty()) {
                     int year = getPs1Epoch(targetRa, targetDec, "z");
-                    image = retrievePs1Image(String.format("red=%s", imageInfos.get("z")), targetRa, targetDec, size, true);
+                    image = retrievePs1Image("red=%s".formatted(imageInfos.get("z")), targetRa, targetDec, size, true);
                     timeSeries.add(new Couple(getImageLabel("PS1 z", year), new NirImage(year, image)));
                 }
             }
@@ -5597,16 +5597,16 @@ public class ImageViewerTab implements Tab {
             if (catalogEntry instanceof GaiaDR3CatalogEntry) {
                 numberOfYears = GAIADR3_ALLWISE_EPOCH_DIFF;
             }
-            if (catalogEntry instanceof NoirlabCatalogEntry) {
-                numberOfYears = ((NoirlabCatalogEntry) catalogEntry).getMeanEpoch() - ALLWISE_REFERENCE_EPOCH;
+            if (catalogEntry instanceof NoirlabCatalogEntry entry) {
+                numberOfYears = entry.getMeanEpoch() - ALLWISE_REFERENCE_EPOCH;
             }
-            if (catalogEntry instanceof CatWiseCatalogEntry) {
-                ra = ((CatWiseCatalogEntry) catalogEntry).getRa_pm();
-                dec = ((CatWiseCatalogEntry) catalogEntry).getDec_pm();
+            if (catalogEntry instanceof CatWiseCatalogEntry entry) {
+                ra = entry.getRa_pm();
+                dec = entry.getDec_pm();
                 numberOfYears = CATWISE_ALLWISE_EPOCH_DIFF;
             }
-            if (catalogEntry instanceof UkidssCatalogEntry) {
-                numberOfYears = ((UkidssCatalogEntry) catalogEntry).getMeanEpoch() - ALLWISE_REFERENCE_EPOCH;
+            if (catalogEntry instanceof UkidssCatalogEntry entry) {
+                numberOfYears = entry.getMeanEpoch() - ALLWISE_REFERENCE_EPOCH;
             }
 
             if (showProperMotion.isSelected()) {
@@ -5726,16 +5726,14 @@ public class ImageViewerTab implements Tab {
             List<LookupResult> mainSequenceResults = mainSequenceSpectralTypeLookupService.lookup(catalogEntry.getColors(true));
             if (!mainSequenceResults.isEmpty()) {
                 container.add(createMainSequenceSpectralTypePanel(mainSequenceResults, catalogEntry, color));
-                if (catalogEntry instanceof AllWiseCatalogEntry) {
-                    AllWiseCatalogEntry entry = (AllWiseCatalogEntry) catalogEntry;
+                if (catalogEntry instanceof AllWiseCatalogEntry entry) {
                     if (isAPossibleAGN(entry.getW1_W2(), entry.getW2_W3())) {
                         JPanel messagePanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
                         messagePanel.add(createLabel(AGN_WARNING, JColor.RED));
                         container.add(messagePanel);
                     }
                 }
-                if (catalogEntry instanceof WhiteDwarf) {
-                    WhiteDwarf entry = (WhiteDwarf) catalogEntry;
+                if (catalogEntry instanceof WhiteDwarf entry) {
                     if (isAPossibleWD(entry.getAbsoluteGmag(), entry.getBP_RP())) {
                         JPanel messagePanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
                         messagePanel.add(createLabel(WD_WARNING, JColor.RED));
@@ -5924,7 +5922,7 @@ public class ImageViewerTab implements Tab {
                 }
             });
 
-            if (catalogEntry instanceof GaiaCmd) {
+            if (catalogEntry instanceof GaiaCmd cmd) {
                 JButton createCmdButton = new JButton("Gaia CMD");
                 collectPanel.add(createCmdButton);
                 createCmdButton.addActionListener((ActionEvent evt) -> {
@@ -5935,7 +5933,7 @@ public class ImageViewerTab implements Tab {
                         frame.addWindowListener(getChildWindowAdapter(baseFrame));
                         frame.setIconImage(getToolBoxImage());
                         frame.setTitle("Gaia CMD");
-                        frame.add(new GaiaCmdPanel((GaiaCmd) catalogEntry));
+                        frame.add(new GaiaCmdPanel(cmd));
                         frame.setSize(1000, 900);
                         frame.setLocation(0, 0);
                         frame.setAlwaysOnTop(false);
